antlrgen/AnolangParser.py
# Generated from ./antlrgen/Anolang.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class AnolangParser ( Parser ):

    grammarFileName = "Anolang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "','", "';'", "'('", "')'", "':'", "'{'", 
                     "'}'", "'return'", "'goto'", "'switch'", "'while'", 
                     "'if'", "'else'", "'case'", "'extrn'", "'auto'", "'?'", 
                     "'&'", "'='", "'++'", "'--'", "'-'", "'!'", "'|'", 
                     "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", "'<<'", 
                     "'>>'", "'+'", "'%'", "'*'", "'/'", "'['", "']'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "NAME", "INT", 
                      "STRING1", "STRING2", "BLOCKCOMMENT", "WS" ]

    RULE_ano_program = 0
    RULE_definition = 1
    RULE_ival = 2
    RULE_statement = 3
    RULE_nullstmt = 4
    RULE_expressionstmt = 5
    RULE_blockstmt = 6
    RULE_returnstmt = 7
    RULE_gotostmt = 8
    RULE_switchstmt = 9
    RULE_whilestmt = 10
    RULE_ifstmt = 11
    RULE_casestmt = 12
    RULE_externsmt = 13
    RULE_autosmt = 14
    RULE_rvalue = 15
    RULE_ternary = 16
    RULE_comparison = 17
    RULE_assignment = 18
    RULE_expression = 19
    RULE_functioninvocation = 20
    RULE_functionparameters = 21
    RULE_assign = 22
    RULE_incdec = 23
    RULE_unary = 24
    RULE_binary = 25
    RULE_lvalue = 26
    RULE_constant = 27
    RULE_identity = 28

    ruleNames =  [ "ano_program", "definition", "ival", "statement", "nullstmt", 
                   "expressionstmt", "blockstmt", "returnstmt", "gotostmt", 
                   "switchstmt", "whilestmt", "ifstmt", "casestmt", "externsmt", 
                   "autosmt", "rvalue", "ternary", "comparison", "assignment", 
                   "expression", "functioninvocation", "functionparameters", 
                   "assign", "incdec", "unary", "binary", "lvalue", "constant", 
                   "identity" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    NAME=39
    INT=40
    STRING1=41
    STRING2=42
    BLOCKCOMMENT=43
    WS=44

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Ano_programContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(AnolangParser.EOF, 0)

        def definition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AnolangParser.DefinitionContext)
            else:
                return self.getTypedRuleContext(AnolangParser.DefinitionContext,i)


        def getRuleIndex(self):
            return AnolangParser.RULE_ano_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAno_program" ):
                listener.enterAno_program(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAno_program" ):
                listener.exitAno_program(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAno_program" ):
                return visitor.visitAno_program(self)
            else:
                return visitor.visitChildren(self)




    def ano_program(self):

        localctx = AnolangParser.Ano_programContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_ano_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==39:
                self.state = 58
                self.definition()
                self.state = 63
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 64
            self.match(AnolangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identity(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AnolangParser.IdentityContext)
            else:
                return self.getTypedRuleContext(AnolangParser.IdentityContext,i)


        def constant(self):
            return self.getTypedRuleContext(AnolangParser.ConstantContext,0)


        def ival(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AnolangParser.IvalContext)
            else:
                return self.getTypedRuleContext(AnolangParser.IvalContext,i)


        def statement(self):
            return self.getTypedRuleContext(AnolangParser.StatementContext,0)


        def getRuleIndex(self):
            return AnolangParser.RULE_definition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefinition" ):
                listener.enterDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefinition" ):
                listener.exitDefinition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefinition" ):
                return visitor.visitDefinition(self)
            else:
                return visitor.visitChildren(self)




    def definition(self):

        localctx = AnolangParser.DefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_definition)
        self._la = 0 # Token type
        try:
            self.state = 100
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 66
                self.identity()
                self.state = 68
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                if la_ == 1:
                    self.state = 67
                    self.constant()


                self.state = 80
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 8246337208320) != 0):
                    self.state = 70
                    self.ival()
                    self.state = 75
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==1:
                        self.state = 71
                        self.match(AnolangParser.T__0)
                        self.state = 72
                        self.ival()
                        self.state = 77
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

                    self.state = 82
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 83
                self.match(AnolangParser.T__1)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 85
                self.identity()
                self.state = 86
                self.match(AnolangParser.T__2)
                self.state = 95
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==39:
                    self.state = 87
                    self.identity()
                    self.state = 92
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==1:
                        self.state = 88
                        self.match(AnolangParser.T__0)
                        self.state = 89
                        self.identity()
                        self.state = 94
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 97
                self.match(AnolangParser.T__3)
                self.state = 98
                self.statement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IvalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def constant(self):
            return self.getTypedRuleContext(AnolangParser.ConstantContext,0)


        def identity(self):
            return self.getTypedRuleContext(AnolangParser.IdentityContext,0)


        def getRuleIndex(self):
            return AnolangParser.RULE_ival

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIval" ):
                listener.enterIval(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIval" ):
                listener.exitIval(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIval" ):
                return visitor.visitIval(self)
            else:
                return visitor.visitChildren(self)




    def ival(self):

        localctx = AnolangParser.IvalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_ival)
        try:
            self.state = 104
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [40, 41, 42]:
                self.enterOuterAlt(localctx, 1)
                self.state = 102
                self.constant()
                pass
            elif token in [39]:
                self.enterOuterAlt(localctx, 2)
                self.state = 103
                self.identity()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def externsmt(self):
            return self.getTypedRuleContext(AnolangParser.ExternsmtContext,0)


        def autosmt(self):
            return self.getTypedRuleContext(AnolangParser.AutosmtContext,0)


        def identity(self):
            return self.getTypedRuleContext(AnolangParser.IdentityContext,0)


        def statement(self):
            return self.getTypedRuleContext(AnolangParser.StatementContext,0)


        def casestmt(self):
            return self.getTypedRuleContext(AnolangParser.CasestmtContext,0)


        def blockstmt(self):
            return self.getTypedRuleContext(AnolangParser.BlockstmtContext,0)


        def ifstmt(self):
            return self.getTypedRuleContext(AnolangParser.IfstmtContext,0)


        def whilestmt(self):
            return self.getTypedRuleContext(AnolangParser.WhilestmtContext,0)


        def switchstmt(self):
            return self.getTypedRuleContext(AnolangParser.SwitchstmtContext,0)


        def gotostmt(self):
            return self.getTypedRuleContext(AnolangParser.GotostmtContext,0)


        def returnstmt(self):
            return self.getTypedRuleContext(AnolangParser.ReturnstmtContext,0)


        def expressionstmt(self):
            return self.getTypedRuleContext(AnolangParser.ExpressionstmtContext,0)


        def nullstmt(self):
            return self.getTypedRuleContext(AnolangParser.NullstmtContext,0)


        def getRuleIndex(self):
            return AnolangParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = AnolangParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_statement)
        try:
            self.state = 121
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 106
                self.externsmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 107
                self.autosmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 108
                self.identity()
                self.state = 109
                self.match(AnolangParser.T__4)
                self.state = 110
                self.statement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 112
                self.casestmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 113
                self.blockstmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 114
                self.ifstmt()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 115
                self.whilestmt()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 116
                self.switchstmt()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 117
                self.gotostmt()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 118
                self.returnstmt()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 119
                self.expressionstmt()
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 120
                self.nullstmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NullstmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return AnolangParser.RULE_nullstmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNullstmt" ):
                listener.enterNullstmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNullstmt" ):
                listener.exitNullstmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNullstmt" ):
                return visitor.visitNullstmt(self)
            else:
                return visitor.visitChildren(self)




    def nullstmt(self):

        localctx = AnolangParser.NullstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_nullstmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(AnolangParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionstmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def rvalue(self):
            return self.getTypedRuleContext(AnolangParser.RvalueContext,0)


        def getRuleIndex(self):
            return AnolangParser.RULE_expressionstmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressionstmt" ):
                listener.enterExpressionstmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressionstmt" ):
                listener.exitExpressionstmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpressionstmt" ):
                return visitor.visitExpressionstmt(self)
            else:
                return visitor.visitChildren(self)




    def expressionstmt(self):

        localctx = AnolangParser.ExpressionstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_expressionstmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.rvalue()
            self.state = 126
            self.match(AnolangParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockstmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AnolangParser.StatementContext)
            else:
                return self.getTypedRuleContext(AnolangParser.StatementContext,i)


        def getRuleIndex(self):
            return AnolangParser.RULE_blockstmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlockstmt" ):
                listener.enterBlockstmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlockstmt" ):
                listener.exitBlockstmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlockstmt" ):
                return visitor.visitBlockstmt(self)
            else:
                return visitor.visitChildren(self)




    def blockstmt(self):

        localctx = AnolangParser.BlockstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_blockstmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(AnolangParser.T__5)
            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 8246353321804) != 0):
                self.state = 129
                self.statement()
                self.state = 134
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 135
            self.match(AnolangParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnstmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def rvalue(self):
            return self.getTypedRuleContext(AnolangParser.RvalueContext,0)


        def getRuleIndex(self):
            return AnolangParser.RULE_returnstmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnstmt" ):
                listener.enterReturnstmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnstmt" ):
                listener.exitReturnstmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnstmt" ):
                return visitor.visitReturnstmt(self)
            else:
                return visitor.visitChildren(self)




    def returnstmt(self):

        localctx = AnolangParser.ReturnstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_returnstmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.match(AnolangParser.T__7)
            self.state = 142
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 138
                self.match(AnolangParser.T__2)
                self.state = 139
                self.rvalue()
                self.state = 140
                self.match(AnolangParser.T__3)


            self.state = 144
            self.match(AnolangParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GotostmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def rvalue(self):
            return self.getTypedRuleContext(AnolangParser.RvalueContext,0)


        def getRuleIndex(self):
            return AnolangParser.RULE_gotostmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGotostmt" ):
                listener.enterGotostmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGotostmt" ):
                listener.exitGotostmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGotostmt" ):
                return visitor.visitGotostmt(self)
            else:
                return visitor.visitChildren(self)




    def gotostmt(self):

        localctx = AnolangParser.GotostmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_gotostmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.match(AnolangParser.T__8)
            self.state = 147
            self.rvalue()
            self.state = 148
            self.match(AnolangParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SwitchstmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def rvalue(self):
            return self.getTypedRuleContext(AnolangParser.RvalueContext,0)


        def statement(self):
            return self.getTypedRuleContext(AnolangParser.StatementContext,0)


        def getRuleIndex(self):
            return AnolangParser.RULE_switchstmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSwitchstmt" ):
                listener.enterSwitchstmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSwitchstmt" ):
                listener.exitSwitchstmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSwitchstmt" ):
                return visitor.visitSwitchstmt(self)
            else:
                return visitor.visitChildren(self)




    def switchstmt(self):

        localctx = AnolangParser.SwitchstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_switchstmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.match(AnolangParser.T__9)
            self.state = 151
            self.rvalue()
            self.state = 152
            self.statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhilestmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def rvalue(self):
            return self.getTypedRuleContext(AnolangParser.RvalueContext,0)


        def statement(self):
            return self.getTypedRuleContext(AnolangParser.StatementContext,0)


        def getRuleIndex(self):
            return AnolangParser.RULE_whilestmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhilestmt" ):
                listener.enterWhilestmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhilestmt" ):
                listener.exitWhilestmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhilestmt" ):
                return visitor.visitWhilestmt(self)
            else:
                return visitor.visitChildren(self)




    def whilestmt(self):

        localctx = AnolangParser.WhilestmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_whilestmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self.match(AnolangParser.T__10)
            self.state = 155
            self.match(AnolangParser.T__2)
            self.state = 156
            self.rvalue()
            self.state = 157
            self.match(AnolangParser.T__3)
            self.state = 158
            self.statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfstmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def rvalue(self):
            return self.getTypedRuleContext(AnolangParser.RvalueContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AnolangParser.StatementContext)
            else:
                return self.getTypedRuleContext(AnolangParser.StatementContext,i)


        def getRuleIndex(self):
            return AnolangParser.RULE_ifstmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfstmt" ):
                listener.enterIfstmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfstmt" ):
                listener.exitIfstmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfstmt" ):
                return visitor.visitIfstmt(self)
            else:
                return visitor.visitChildren(self)




    def ifstmt(self):

        localctx = AnolangParser.IfstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_ifstmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self.match(AnolangParser.T__11)
            self.state = 161
            self.match(AnolangParser.T__2)
            self.state = 162
            self.rvalue()
            self.state = 163
            self.match(AnolangParser.T__3)
            self.state = 164
            self.statement()
            self.state = 167
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.state = 165
                self.match(AnolangParser.T__12)
                self.state = 166
                self.statement()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CasestmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def constant(self):
            return self.getTypedRuleContext(AnolangParser.ConstantContext,0)


        def statement(self):
            return self.getTypedRuleContext(AnolangParser.StatementContext,0)


        def getRuleIndex(self):
            return AnolangParser.RULE_casestmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCasestmt" ):
                listener.enterCasestmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCasestmt" ):
                listener.exitCasestmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCasestmt" ):
                return visitor.visitCasestmt(self)
            else:
                return visitor.visitChildren(self)




    def casestmt(self):

        localctx = AnolangParser.CasestmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_casestmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 169
            self.match(AnolangParser.T__13)
            self.state = 170
            self.constant()
            self.state = 171
            self.match(AnolangParser.T__4)
            self.state = 172
            self.statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExternsmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identity(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AnolangParser.IdentityContext)
            else:
                return self.getTypedRuleContext(AnolangParser.IdentityContext,i)


        def getRuleIndex(self):
            return AnolangParser.RULE_externsmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExternsmt" ):
                listener.enterExternsmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExternsmt" ):
                listener.exitExternsmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExternsmt" ):
                return visitor.visitExternsmt(self)
            else:
                return visitor.visitChildren(self)




    def externsmt(self):

        localctx = AnolangParser.ExternsmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_externsmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 174
            self.match(AnolangParser.T__14)
            self.state = 175
            self.identity()
            self.state = 180
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 176
                self.match(AnolangParser.T__0)
                self.state = 177
                self.identity()
                self.state = 182
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 183
            self.match(AnolangParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AutosmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identity(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AnolangParser.IdentityContext)
            else:
                return self.getTypedRuleContext(AnolangParser.IdentityContext,i)


        def constant(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AnolangParser.ConstantContext)
            else:
                return self.getTypedRuleContext(AnolangParser.ConstantContext,i)

